refactor: switch to ranking query repository
